code/java/ProcuretoPayAPISCIM/v1/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Procure to Pay API: SCIM client library for Java

[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/procuretopayapiscim)](https://search.maven.org/artifact/com.factset.sdk/procuretopayapiscim)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

FactSet's SCIM API implementation.

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 1.0.0
- Package version: 0.21.2
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.0.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>procuretopayapiscim</artifactId>
  <version>0.21.2</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.0.0"
    implementation "com.factset.sdk:procuretopayapiscim:0.21.2"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

```java

import com.factset.sdk.ProcuretoPayAPISCIM.*;
import com.factset.sdk.ProcuretoPayAPISCIM.auth.*;
import com.factset.sdk.ProcuretoPayAPISCIM.models.*;
import com.factset.sdk.ProcuretoPayAPISCIM.api.FileManagerAuditApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class FileManagerAuditApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        FileManagerAuditApi apiInstance = new FileManagerAuditApi(defaultClient);
        try {
            java.util.List<Object> result = apiInstance.fileManagerAuditGet();
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling FileManagerAuditApi#fileManagerAuditGet");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.ProcuretoPayAPISCIM.*;
import com.factset.sdk.ProcuretoPayAPISCIM.api.FileManagerAuditApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

FileManagerAuditApi apiInstance = new FileManagerAuditApi(defaultClient);

```


## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/scim/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FileManagerAuditApi* | [**fileManagerAuditGet**](docs/FileManagerAuditApi.md#fileManagerAuditGet) | **GET** /FileManagerAudit | Get File Manager audit data.
*GroupsApi* | [**groupIdGet**](docs/GroupsApi.md#groupIdGet) | **GET** /Group/{id} | Get a group.
*GroupsApi* | [**groupIdPatch**](docs/GroupsApi.md#groupIdPatch) | **PATCH** /Group/{id} | Patch a group (add, replace, or remove attributes of a group.)
*GroupsApi* | [**groupIdPut**](docs/GroupsApi.md#groupIdPut) | **PUT** /Group/{id} | Replace a group.
*GroupsApi* | [**groupsGet**](docs/GroupsApi.md#groupsGet) | **GET** /Groups | Get a list of groups.
*LocationsApi* | [**locationsGet**](docs/LocationsApi.md#locationsGet) | **GET** /Locations | Get a list of locations.
*LocationsApi* | [**locationsIdGet**](docs/LocationsApi.md#locationsIdGet) | **GET** /Locations/{id} | Get a location.
*LocationsApi* | [**locationsIdPatch**](docs/LocationsApi.md#locationsIdPatch) | **PATCH** /Locations/{id} | Patch a location (add, replace, or remove attributes of a location.)
*LocationsApi* | [**locationsIdPut**](docs/LocationsApi.md#locationsIdPut) | **PUT** /Locations/{id} | Replace a location.
*ProductsApi* | [**productsGet**](docs/ProductsApi.md#productsGet) | **GET** /Products | Get a list of products.
*ProductsApi* | [**productsIdGet**](docs/ProductsApi.md#productsIdGet) | **GET** /Products/{id} | Get a product.
*SchemasApi* | [**schemasGet**](docs/SchemasApi.md#schemasGet) | **GET** /Schemas | Get a list of schemas.
*SchemasApi* | [**schemasIdGet**](docs/SchemasApi.md#schemasIdGet) | **GET** /Schemas/{id} | Get a schema.
*ServerConfigurationApi* | [**serviceProviderConfigGet**](docs/ServerConfigurationApi.md#serviceProviderConfigGet) | **GET** /ServiceProviderConfig | Get server configuration.
*UsersApi* | [**usersGet**](docs/UsersApi.md#usersGet) | **GET** /Users | Get a list of users.
*UsersApi* | [**usersIdDelete**](docs/UsersApi.md#usersIdDelete) | **DELETE** /Users/{id} | Delete a user
*UsersApi* | [**usersIdGet**](docs/UsersApi.md#usersIdGet) | **GET** /Users/{id} | Get a user.
*UsersApi* | [**usersIdPatch**](docs/UsersApi.md#usersIdPatch) | **PATCH** /Users/{id} | Patch a user (add, replace, or remove attributes of a user.)
*UsersApi* | [**usersIdPut**](docs/UsersApi.md#usersIdPut) | **PUT** /Users/{id} | Replace a user.
*UsersApi* | [**usersPost**](docs/UsersApi.md#usersPost) | **POST** /Users | Create a user.
*VermilionGroupsApi* | [**vermilionGroupsGet**](docs/VermilionGroupsApi.md#vermilionGroupsGet) | **GET** /VermilionGroups | Get a list of Vermilion groups.
*VermilionGroupsApi* | [**vermilionGroupsIdGet**](docs/VermilionGroupsApi.md#vermilionGroupsIdGet) | **GET** /VermilionGroups/{id} | Get a Vermilion group.
*VermilionGroupsApi* | [**vermilionGroupsIdPatch**](docs/VermilionGroupsApi.md#vermilionGroupsIdPatch) | **PATCH** /VermilionGroups/{id} | Patch a Vermilion group (add, replace, or remove attributes of a Vermilion group.)
*VermilionGroupsApi* | [**vermilionGroupsIdPut**](docs/VermilionGroupsApi.md#vermilionGroupsIdPut) | **PUT** /VermilionGroups/{id} | Replace a Vermilion group.
*VermilionUsersApi* | [**vermilionUsersGet**](docs/VermilionUsersApi.md#vermilionUsersGet) | **GET** /VermilionUsers | Get a list of Vermilion users.
*VermilionUsersApi* | [**vermilionUsersIdDelete**](docs/VermilionUsersApi.md#vermilionUsersIdDelete) | **DELETE** /VermilionUsers/{id} | Delete a Vermilion user.
*VermilionUsersApi* | [**vermilionUsersIdGet**](docs/VermilionUsersApi.md#vermilionUsersIdGet) | **GET** /VermilionUsers/{id} | Get a Vermilion user.
*VermilionUsersApi* | [**vermilionUsersIdPatch**](docs/VermilionUsersApi.md#vermilionUsersIdPatch) | **PATCH** /VermilionUsers/{id} | Patch a Vermilion user (add, replace, or remove attributes of a Vermilion user.)
*VermilionUsersApi* | [**vermilionUsersIdPut**](docs/VermilionUsersApi.md#vermilionUsersIdPut) | **PUT** /VermilionUsers/{id} | Replace a Vermilion user.
*VermilionUsersApi* | [**vermilionUsersPost**](docs/VermilionUsersApi.md#vermilionUsersPost) | **POST** /VermilionUsers | Create a Vermilion user.


## Documentation for Models

 - [Error](docs/Error.md)
 - [GroupResource](docs/GroupResource.md)
 - [GroupResourceList](docs/GroupResourceList.md)
 - [GroupResourceMembers](docs/GroupResourceMembers.md)
 - [GroupResourceMeta](docs/GroupResourceMeta.md)
 - [GroupResourceUrnScimSchemasExtensionFactSetEnterpriseHosting10Group](docs/GroupResourceUrnScimSchemasExtensionFactSetEnterpriseHosting10Group.md)
 - [LocationResource](docs/LocationResource.md)
 - [LocationResourceList](docs/LocationResourceList.md)
 - [LocationResourceMeta](docs/LocationResourceMeta.md)
 - [LocationResourceReference](docs/LocationResourceReference.md)
 - [Patch](docs/Patch.md)
 - [PatchOperations](docs/PatchOperations.md)
 - [PendingProductOrder](docs/PendingProductOrder.md)
 - [ProductResource](docs/ProductResource.md)
 - [ProductResourceList](docs/ProductResourceList.md)
 - [ProductResourceMeta](docs/ProductResourceMeta.md)
 - [ProductResourceReference](docs/ProductResourceReference.md)
 - [Schema](docs/Schema.md)
 - [SchemaAttributes](docs/SchemaAttributes.md)
 - [SchemaList](docs/SchemaList.md)
 - [SchemaSubAttributes](docs/SchemaSubAttributes.md)
 - [ServiceProviderConfig](docs/ServiceProviderConfig.md)
 - [ServiceProviderConfigAuthenticationSchemes](docs/ServiceProviderConfigAuthenticationSchemes.md)
 - [ServiceProviderConfigBulk](docs/ServiceProviderConfigBulk.md)
 - [ServiceProviderConfigChangePassword](docs/ServiceProviderConfigChangePassword.md)
 - [ServiceProviderConfigEtag](docs/ServiceProviderConfigEtag.md)
 - [ServiceProviderConfigFilter](docs/ServiceProviderConfigFilter.md)
 - [ServiceProviderConfigPatch](docs/ServiceProviderConfigPatch.md)
 - [ServiceProviderConfigSort](docs/ServiceProviderConfigSort.md)
 - [UserResource](docs/UserResource.md)
 - [UserResourceGroups](docs/UserResourceGroups.md)
 - [UserResourceList](docs/UserResourceList.md)
 - [UserResourceMeta](docs/UserResourceMeta.md)
 - [UserResourceName](docs/UserResourceName.md)
 - [UserResourcePhoneNumbers](docs/UserResourcePhoneNumbers.md)
 - [UserResourceUrnScimSchemasExtensionCoreFactset10](docs/UserResourceUrnScimSchemasExtensionCoreFactset10.md)
 - [VermilionGroupResource](docs/VermilionGroupResource.md)
 - [VermilionGroupResourceList](docs/VermilionGroupResourceList.md)
 - [VermilionGroupResourceMembers](docs/VermilionGroupResourceMembers.md)
 - [VermilionGroupResourceMeta](docs/VermilionGroupResourceMeta.md)
 - [VermilionUserResource](docs/VermilionUserResource.md)
 - [VermilionUserResourceEmails](docs/VermilionUserResourceEmails.md)
 - [VermilionUserResourceEntitlements](docs/VermilionUserResourceEntitlements.md)
 - [VermilionUserResourceGroups](docs/VermilionUserResourceGroups.md)
 - [VermilionUserResourceList](docs/VermilionUserResourceList.md)
 - [VermilionUserResourceMeta](docs/VermilionUserResourceMeta.md)
 - [VermilionUserResourceName](docs/VermilionUserResourceName.md)
 - [VermilionUserResourcePhoneNumbers](docs/VermilionUserResourcePhoneNumbers.md)
 - [VermilionUserResourcePhotos](docs/VermilionUserResourcePhotos.md)
 - [VermilionUserResourceRoles](docs/VermilionUserResourceRoles.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
