code/java/ProcuretoPayAPISCIM/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Procure to Pay API: SCIM client library for Java

[![API Version](https://img.shields.io/badge/api-v2.7.0-blue)](https://developer.factset.com/api-catalog/procure-to-pay-api-scim)
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/procuretopayapiscim/0.25.1)](https://central.sonatype.com/artifact/com.factset.sdk/procuretopayapiscim/0.25.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

FactSet's SCIM API implementation.

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.7.0
- SDK version: 0.25.1
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>procuretopayapiscim</artifactId>
  <version>0.25.1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.sdk:procuretopayapiscim:0.25.1"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.ProcuretoPayAPISCIM.*;
import com.factset.sdk.ProcuretoPayAPISCIM.auth.*;
import com.factset.sdk.ProcuretoPayAPISCIM.models.*;
import com.factset.sdk.ProcuretoPayAPISCIM.api.FederationsApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class FederationsApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        FederationsApi apiInstance = new FederationsApi(defaultClient);
        String id = "id_example"; // String | ID of resource.
        java.util.List<String> attributes = Arrays.asList(); // java.util.List<String> | Attribute whitelist filter string. A comma-separated list of resource attribute names to be returned in the response, overriding the set of attributes that would be returned by default. Attribute names must be specified in standard attribute notation (see [RFC 7644 section 3.10](https://datatracker.ietf.org/doc/html/rfc7644#section-3.10).) This parameter cannot be used with the *excludedAttributes* or *additionalAttributes* parameters.
        java.util.List<String> excludedAttributes = Arrays.asList(); // java.util.List<String> | Attribute blacklist filter string. A comma-separated list of resource attribute names to be excluded in the response, overriding the set of attributes that would be returned by default. Attribute names must be specified in standard attribute notation (see [RFC 7644 section 3.10](https://datatracker.ietf.org/doc/html/rfc7644#section-3.10).) This parameter cannot be used with the *attributes* or *additionalAttributes* parameters.
        java.util.List<String> additionalAttributes = Arrays.asList(); // java.util.List<String> | Non-standard attribute filter string. A comma-separated list of resource attribute names to be included in the response, complementing the set of attributes that would be returned by default. Attribute names must be specified in standard attribute notation (see [RFC 7644 section 3.10](https://datatracker.ietf.org/doc/html/rfc7644#section-3.10).) This parameter cannot be used with the *attributes* or *excludedAttributes* parameters.
        try {
            FederationResource result = apiInstance.getFederation(id, attributes, excludedAttributes, additionalAttributes);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling FederationsApi#getFederation");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.ProcuretoPayAPISCIM.*;
import com.factset.sdk.ProcuretoPayAPISCIM.api.FederationsApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

FederationsApi apiInstance = new FederationsApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.ProcuretoPayAPISCIM.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/scim/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*FederationsApi* | [**getFederation**](docs/FederationsApi.md#getFederation) | **GET** /Federations/{id} | Get a federation.
*FederationsApi* | [**getFederations**](docs/FederationsApi.md#getFederations) | **GET** /Federations | Get a list of federations.
*FederationsApi* | [**modifyFederation**](docs/FederationsApi.md#modifyFederation) | **PATCH** /Federations/{id} | Patch a federation.
*FederationsApi* | [**replaceFederation**](docs/FederationsApi.md#replaceFederation) | **PUT** /Federations/{id} | Replace a federation.
*FileManagerAuditApi* | [**getFileManagerAudit**](docs/FileManagerAuditApi.md#getFileManagerAudit) | **GET** /FileManagerAudit | Get File Manager audit data.
*FirmDescriptionsApi* | [**getFirmDescription**](docs/FirmDescriptionsApi.md#getFirmDescription) | **GET** /FirmDescriptions/{id} | Get a firm description.
*FirmDescriptionsApi* | [**getFirmDescriptions**](docs/FirmDescriptionsApi.md#getFirmDescriptions) | **GET** /FirmDescriptions | Get a list of firm descriptions.
*GroupsApi* | [**getGroup**](docs/GroupsApi.md#getGroup) | **GET** /Group/{id} | Get a group.
*GroupsApi* | [**getGroups**](docs/GroupsApi.md#getGroups) | **GET** /Groups | Get a list of groups.
*GroupsApi* | [**modifyGroup**](docs/GroupsApi.md#modifyGroup) | **PATCH** /Group/{id} | Patch a group.
*GroupsApi* | [**replaceGroup**](docs/GroupsApi.md#replaceGroup) | **PUT** /Group/{id} | Replace a group.
*LocationsApi* | [**createLocation**](docs/LocationsApi.md#createLocation) | **POST** /Locations | Create a location.
*LocationsApi* | [**getLocation**](docs/LocationsApi.md#getLocation) | **GET** /Locations/{id} | Get a location.
*LocationsApi* | [**getLocations**](docs/LocationsApi.md#getLocations) | **GET** /Locations | Get a list of locations.
*LocationsApi* | [**modifyLocation**](docs/LocationsApi.md#modifyLocation) | **PATCH** /Locations/{id} | Patch a location.
*LocationsApi* | [**replaceLocation**](docs/LocationsApi.md#replaceLocation) | **PUT** /Locations/{id} | Replace a location.
*ProductsApi* | [**getProduct**](docs/ProductsApi.md#getProduct) | **GET** /Products/{id} | Get a product.
*ProductsApi* | [**getProducts**](docs/ProductsApi.md#getProducts) | **GET** /Products | Get a list of products.
*SchemasApi* | [**getSchema**](docs/SchemasApi.md#getSchema) | **GET** /Schemas/{id} | Get a schema.
*SchemasApi* | [**getSchemas**](docs/SchemasApi.md#getSchemas) | **GET** /Schemas | Get a list of schemas.
*ServiceProviderConfigurationApi* | [**getServiceProviderConfig**](docs/ServiceProviderConfigurationApi.md#getServiceProviderConfig) | **GET** /ServiceProviderConfig | Get service provider configuration.
*UserClassesApi* | [**getUserClass**](docs/UserClassesApi.md#getUserClass) | **GET** /UserClasses/{id} | Get a user class.
*UserClassesApi* | [**getUserClasses**](docs/UserClassesApi.md#getUserClasses) | **GET** /UserClasses | Get a list of user classes.
*UserPositionsApi* | [**getUserPosition**](docs/UserPositionsApi.md#getUserPosition) | **GET** /UserPositions/{id} | Get a user position.
*UserPositionsApi* | [**getUserPositions**](docs/UserPositionsApi.md#getUserPositions) | **GET** /UserPositions | Get a list of user positions.
*UsersApi* | [**createUser**](docs/UsersApi.md#createUser) | **POST** /Users | Create a user.
*UsersApi* | [**deleteUser**](docs/UsersApi.md#deleteUser) | **DELETE** /Users/{id} | Delete a user.
*UsersApi* | [**getUser**](docs/UsersApi.md#getUser) | **GET** /Users/{id} | Get a user.
*UsersApi* | [**getUsers**](docs/UsersApi.md#getUsers) | **GET** /Users | Get a list of users.
*UsersApi* | [**modifyUser**](docs/UsersApi.md#modifyUser) | **PATCH** /Users/{id} | Patch a user.
*UsersApi* | [**replaceUser**](docs/UsersApi.md#replaceUser) | **PUT** /Users/{id} | Replace a user.


## Documentation for Models

 - [AuthenticationScheme](docs/AuthenticationScheme.md)
 - [Error](docs/Error.md)
 - [ErrorUrnScimSchemasExtensionFactSetCore10Error](docs/ErrorUrnScimSchemasExtensionFactSetCore10Error.md)
 - [FederationResource](docs/FederationResource.md)
 - [FederationResourceList](docs/FederationResourceList.md)
 - [FederationResourceLocation](docs/FederationResourceLocation.md)
 - [FederationResourceReference](docs/FederationResourceReference.md)
 - [FederationResourceReferenceAssertionValue](docs/FederationResourceReferenceAssertionValue.md)
 - [FederationResourceUser](docs/FederationResourceUser.md)
 - [FederationResourceUserAssertionValue](docs/FederationResourceUserAssertionValue.md)
 - [FileManagerAuditItem](docs/FileManagerAuditItem.md)
 - [FileManagerAuditItemAdditionalProperty](docs/FileManagerAuditItemAdditionalProperty.md)
 - [FileManagerAuditItemAdditionalPropertyEntity](docs/FileManagerAuditItemAdditionalPropertyEntity.md)
 - [FileManagerAuditItemAdditionalPropertyPermissionOverride](docs/FileManagerAuditItemAdditionalPropertyPermissionOverride.md)
 - [FileManagerAuditItemAdditionalPropertyPermissions](docs/FileManagerAuditItemAdditionalPropertyPermissions.md)
 - [FirmDescriptionResource](docs/FirmDescriptionResource.md)
 - [FirmDescriptionResourceList](docs/FirmDescriptionResourceList.md)
 - [FirmDescriptionResourceMeta](docs/FirmDescriptionResourceMeta.md)
 - [FirmDescriptionResourceReference](docs/FirmDescriptionResourceReference.md)
 - [GroupResource](docs/GroupResource.md)
 - [GroupResourceList](docs/GroupResourceList.md)
 - [GroupResourceMember](docs/GroupResourceMember.md)
 - [GroupResourceMeta](docs/GroupResourceMeta.md)
 - [GroupResourceUrnScimSchemasExtensionFactSetCore10Group](docs/GroupResourceUrnScimSchemasExtensionFactSetCore10Group.md)
 - [GroupResourceUrnScimSchemasExtensionFactSetEnterpriseHosting10Group](docs/GroupResourceUrnScimSchemasExtensionFactSetEnterpriseHosting10Group.md)
 - [GroupResourceUrnScimSchemasExtensionFactSetVRS10Group](docs/GroupResourceUrnScimSchemasExtensionFactSetVRS10Group.md)
 - [InlineResponse429](docs/InlineResponse429.md)
 - [LocationResource](docs/LocationResource.md)
 - [LocationResourceCompanyAgreementUrl](docs/LocationResourceCompanyAgreementUrl.md)
 - [LocationResourceFirmDescription](docs/LocationResourceFirmDescription.md)
 - [LocationResourceList](docs/LocationResourceList.md)
 - [LocationResourceMainLocation](docs/LocationResourceMainLocation.md)
 - [LocationResourceManagingLocation](docs/LocationResourceManagingLocation.md)
 - [LocationResourceMeta](docs/LocationResourceMeta.md)
 - [LocationResourceReference](docs/LocationResourceReference.md)
 - [Patch](docs/Patch.md)
 - [PatchOperation](docs/PatchOperation.md)
 - [PatchOperationValue](docs/PatchOperationValue.md)
 - [PendingProductOrder](docs/PendingProductOrder.md)
 - [ProductResource](docs/ProductResource.md)
 - [ProductResourceList](docs/ProductResourceList.md)
 - [ProductResourceMeta](docs/ProductResourceMeta.md)
 - [ProductResourceReference](docs/ProductResourceReference.md)
 - [ProductResourceReferenceWithRapidActivationInfo](docs/ProductResourceReferenceWithRapidActivationInfo.md)
 - [Schema](docs/Schema.md)
 - [SchemaAttribute](docs/SchemaAttribute.md)
 - [SchemaList](docs/SchemaList.md)
 - [SchemaMeta](docs/SchemaMeta.md)
 - [SchemaSubAttribute](docs/SchemaSubAttribute.md)
 - [ServiceProviderConfig](docs/ServiceProviderConfig.md)
 - [ServiceProviderConfigBulk](docs/ServiceProviderConfigBulk.md)
 - [ServiceProviderConfigChangePassword](docs/ServiceProviderConfigChangePassword.md)
 - [ServiceProviderConfigEtag](docs/ServiceProviderConfigEtag.md)
 - [ServiceProviderConfigFilter](docs/ServiceProviderConfigFilter.md)
 - [ServiceProviderConfigPatch](docs/ServiceProviderConfigPatch.md)
 - [ServiceProviderConfigSort](docs/ServiceProviderConfigSort.md)
 - [UserClassResource](docs/UserClassResource.md)
 - [UserClassResourceList](docs/UserClassResourceList.md)
 - [UserClassResourceMeta](docs/UserClassResourceMeta.md)
 - [UserClassResourceReference](docs/UserClassResourceReference.md)
 - [UserPositionResource](docs/UserPositionResource.md)
 - [UserPositionResourceList](docs/UserPositionResourceList.md)
 - [UserPositionResourceMeta](docs/UserPositionResourceMeta.md)
 - [UserPositionResourceReference](docs/UserPositionResourceReference.md)
 - [UserResource](docs/UserResource.md)
 - [UserResourceGroup](docs/UserResourceGroup.md)
 - [UserResourceList](docs/UserResourceList.md)
 - [UserResourceMeta](docs/UserResourceMeta.md)
 - [UserResourceName](docs/UserResourceName.md)
 - [UserResourcePhoneNumber](docs/UserResourcePhoneNumber.md)
 - [UserResourceUrnScimSchemasExtensionFactSetCore10User](docs/UserResourceUrnScimSchemasExtensionFactSetCore10User.md)
 - [UserResourceUrnScimSchemasExtensionFactSetCore10UserUserTaxonomyData](docs/UserResourceUrnScimSchemasExtensionFactSetCore10UserUserTaxonomyData.md)
 - [UserResourceUrnScimSchemasExtensionFactSetVRS10User](docs/UserResourceUrnScimSchemasExtensionFactSetVRS10User.md)
 - [UserResourceVRSDomainData](docs/UserResourceVRSDomainData.md)
 - [UserResourceVRSDomainDataTenancies](docs/UserResourceVRSDomainDataTenancies.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
